--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CONEXAO_BD": "Data Source=victoramaro.com.br, 11433;Initial Catalog=DB_Visitatus_DEV;User ID=V1s1tAtu5D3v;Password=&i329cQs7;Connection Timeout=600;"
+    "CONEXAO_BD": "Data Source=visitatus.com.br, 11433;Initial Catalog=DB_Visitatus_DEV;User ID=V1s1tAtu5D3v;Password=&i329cQs7;Connection Timeout=600;"
   },
   "Logging": {
     "LogLevel": {
